--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,7 @@ body {
   font-size: 13px;
   *font-size: 82%;
   line-height: 1.5;
+  background: #EEE8DD;
 }
 
 a:link {
@@ -208,15 +209,51 @@ hr {
   position: relative;
   z-index: 50;
   width: 1024px;
-  margin: 60px auto 0;
+  margin: 0 auto;
 }
 
 /* --------------------------------------------------
     1. Header
 -------------------------------------------------- */
+.gHead {
+  height: 120px;
+  margin: 10px 0;
+  padding: 10px 20px;
+  background: #fafafa;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+}
+
 /* --------------------------------------------------
     2. Content
 -------------------------------------------------- */
+.gNav {
+  float: left;
+  width: 240px;
+  padding: 15px 10px;
+  background: #fff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.4);
+}
+
+.main {
+  float: right;
+  width: 700px;
+  margin: 10px;
+}
+
 /* --------------------------------------------------
     3. Footer
 -------------------------------------------------- */
